--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -13,7 +13,7 @@
         z-index: 100;
     }
 
-    img {
+    > img {
         width: 6rem;
         transition: transform 0.3s ease;
         cursor: pointer;
@@ -25,7 +25,7 @@
     .container {
         gap: clamp(13rem, 11.714rem + 2.679vw, 16rem);
 
-        img {
+        > img {
             width: clamp(8rem, 7.143rem + 1.786vw, 10rem);
         }
     }
