--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background: linear-gradient(181.63deg, #290439 -9.65%, #FF3381 113.22%), #E8E8E8;
+  background: linear-gradient(181.63deg, #250036 -9.65%, #9B0A41 113.22%), #E8E8E8;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -131,6 +131,7 @@ button {
   font-family: "Cookie", cursive;
   font-weight: 400;
   font-style: normal;
+  width: clamp(9rem, 7.663rem + 7.781vw, 17rem);
 }
 .header--button, .header-page--button {
   font-size: clamp(0.75rem, 0.471rem + 1.626vw, 1.25rem);
@@ -343,9 +344,6 @@ button {
   }
 }
 @media only screen and (min-width: 1024px) {
-  .header--name {
-    font-size: clamp(1.5rem, -0.167rem + 2.604vw, 4rem);
-  }
   .header--button {
     display: none;
   }
