--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -26,7 +26,7 @@
 }
 
 body {
-    background: linear-gradient(181.63deg, #290439 -9.65%, #FF3381 113.22%), #E8E8E8;
+    background: linear-gradient(181.63deg, #250036 -9.65%, #9B0A41 113.22%), #E8E8E8;
 
     height: 100vh;
     width: 100vw;
@@ -149,6 +149,8 @@ button {
         font-family: "Cookie", cursive;
         font-weight: 400;
         font-style: normal;
+
+        width: clamp(9rem, 7.663rem + 7.781vw, 17rem);
     }
 
     &--button {
@@ -239,8 +241,6 @@ button {
     .fourth {
         background-color: #FFA6C8;
     }
-
-    
 }
 
 .ascending {
@@ -410,10 +410,6 @@ button {
 
 @media only screen and (min-width: 1024px) {
     .header {
-        &--name {
-            font-size: clamp(1.5rem, -0.167rem + 2.604vw, 4rem);
-        }
-
         &--button {
             display: none;
         }
