--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -155,6 +155,7 @@ button {
 
     &--button {
         font-size: clamp(0.75rem, 0.471rem + 1.626vw, 1.25rem);
+        cursor: pointer;
     }
 
     &--items {
@@ -264,7 +265,7 @@ button {
 
 .page-header {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     align-items: center;
     background-color: #f6f6f6;
     border-radius: 5px;
@@ -274,6 +275,7 @@ button {
     top: 0;
     z-index: 1000;
     box-shadow: 4px 2px 4px #ffa6c8, inset 2px 2px 4px rgb(149 149 149 / 50%);
+    gap: 5px;
 
     #backBtn {
         cursor: pointer;
@@ -286,6 +288,7 @@ button {
             font-weight: 600;
             color: var(--secondary-color);
             text-transform: capitalize;
+            font-size: clamp(1rem, 0.833rem + 0.973vw, 2rem);
         }
     }
 }
