--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background: linear-gradient(181.63deg, #250036 -9.65%, #9B0A41 113.22%), #E8E8E8;
+  background: linear-gradient(181.63deg, #250036 -9.65%, #98003A 113.22%), #E8E8E8;
   height: 100vh;
   width: 100vw;
   display: flex;
