--- a/styles/ams/ams.scss
+++ b/styles/ams/ams.scss
@@ -44,8 +44,19 @@ body {
         border: none;
         border-radius: 10px;
         padding: 5px 30px;
+        margin-bottom: 20px;
 
         cursor: pointer;
+    }
+
+    .ams-prototype-btn {
+        text-decoration: none;
+        color: var(--primary-color);
+        border-radius: 10px;
+        padding: 5px 30px;
+        cursor: pointer;
+        border: 1px solid var(--primary-color);
+        box-shadow: 1px 2px 5px var(--primary-color-tint);
     }
 }
 
@@ -86,7 +97,7 @@ body {
             }
         }
 
-        .ams-btn {
+        .ams-btn, .ams-prototype-btn {
             font-size: clamp(1.1rem, 0.714rem + 0.804vw, 2rem);
         }
     }
