--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -1,49 +1,68 @@
-@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cookie&family=Julius+Sans+One&family=Petit+Formal+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 :root {
-  --primary-color: #060930;
-  --primary-color-shade: #00021d;
-  --primary-color-tint: #0b1050;
-  --secondary-color: #3F0071;
-  --secondary-color-shade: #2e0053;
-  --secondary-color-tint: #5f04a8;
-  --tertiary-color: #FB2576;
-  --tertiary-color-shade: #c9004d;
-  --tertiary-color-tint: #ff448b;
+  --primary-color: #630000;
+  --secondary-color: #D8B6A4;
+  --tertiary-color: #EEEBDD;
+  --accent-color: #000000;
+}
+
+.kodchasan-extralight {
+  font-family: "Kodchasan", serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.kodchasan-light {
+  font-family: "Kodchasan", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.kodchasan-regular {
+  font-family: "Kodchasan", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.kodchasan-medium {
+  font-family: "Kodchasan", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.kodchasan-semibold {
+  font-family: "Kodchasan", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.kodchasan-bold {
+  font-family: "Kodchasan", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.kodchasan-regular-italic {
+  font-family: "Kodchasan", serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Gowun Dodum", sans-serif;
+  font-family: "Kodchasan", serif;
   font-weight: 400;
   font-style: normal;
-}
-
-body {
-  background: linear-gradient(181.63deg, #250036 -9.65%, #98003A 113.22%), #E8E8E8;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-}
-
-.container {
-  width: 80vw;
-  height: 80vh;
-  overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  color: var(--accent-color);
 }
 
 button {
   color: #fff;
   border: none;
   border-radius: 5px;
-  padding: 5px 30px;
+  padding: 5px 20px;
   cursor: pointer;
 }
 
@@ -51,7 +70,7 @@ button {
   background-color: var(--primary-color);
 }
 .primary_btn:hover {
-  background-color: var(--primary-color-tint);
+  opacity: 0.98;
 }
 
 .secondary_btn {
@@ -98,6 +117,7 @@ button {
 .primary_link {
   text-decoration: none;
   color: var(--primary-color);
+  background-color: transparent;
 }
 .primary_link:hover {
   font-weight: 800;
