--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -58,6 +58,10 @@
   color: var(--accent-color);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 button {
   color: #fff;
   border: none;
@@ -166,76 +170,6 @@ button {
 }
 .header--item :hover, .header-page--item :hover {
   transform: scale(0.96);
-}
-
-.header-menu, .header-page-menu {
-  display: none;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-.header-menu--item, .header-page-menu--item {
-  width: 100vw;
-  margin: 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transform: translateY(-30px);
-  animation: slideDown 0.6s ease forwards;
-}
-.header-menu--item h1, .header-page-menu--item h1 {
-  color: #fff;
-}
-.header-menu--item:nth-child(1), .header-page-menu--item:nth-child(1) {
-  animation-delay: 0.1s;
-}
-.header-menu--item:nth-child(2), .header-page-menu--item:nth-child(2) {
-  animation-delay: 0.3s;
-}
-.header-menu--item:nth-child(3), .header-page-menu--item:nth-child(3) {
-  animation-delay: 0.5s;
-}
-.header-menu--item:nth-child(4), .header-page-menu--item:nth-child(4) {
-  animation-delay: 0.7s;
-}
-.header-menu .active::after, .header-page-menu .active::after {
-  content: "Active";
-  color: #00FF44;
-  margin-top: -10px;
-}
-.header-menu .first, .header-page-menu .first {
-  background-color: var(--tertiary-color-shade);
-}
-.header-menu .second, .header-page-menu .second {
-  background-color: #FF438A;
-}
-.header-menu .third, .header-page-menu .third {
-  background-color: #FF74A9;
-}
-.header-menu .fourth, .header-page-menu .fourth {
-  background-color: #FFA6C8;
-}
-
-.ascending .header-menu--item {
-  animation: ascendUp 1s ease forwards;
-}
-.ascending .header-menu--item:nth-child(1) {
-  animation-delay: 0.7s;
-}
-.ascending .header-menu--item:nth-child(2) {
-  animation-delay: 0.5s;
-}
-.ascending .header-menu--item:nth-child(3) {
-  animation-delay: 0.3s;
-}
-.ascending .header-menu--item:nth-child(4) {
-  animation-delay: 0.1s;
 }
 
 .page-header {
