--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -21,7 +21,62 @@
                 margin-left: 5px;
             }
         }
-        
+
+        &-nav {
+            position: fixed;
+            top: 0;
+            right: 0;
+            height: 100vh;
+            width: 80vw;
+            list-style: none;
+            background-color: var(--accent-color);
+            z-index: 2;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: clamp(3rem, 2.09rem + 4.552vw, 5rem);
+            justify-content: center;
+
+            transform: translateX(100%);
+            transition: transform 0.3s ease-in-out;
+
+            &-close {
+                color: #fff;
+                position: absolute;
+                top: 2rem;
+                right: 2rem;
+                font-size: 1.5rem;
+            }
+
+            &-item {
+                color: #fff;
+                cursor: pointer;
+                opacity: 0;
+                animation: fadeIn 1s forwards;
+                font-size: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+            }
+
+            &-item:nth-child(2) {
+                animation-delay: 0.3s;
+            }
+            &-item:nth-child(3) {
+                animation-delay: 0.6s;
+            }
+            &-item:nth-child(4) {
+                animation-delay: 0.9s;
+            }
+        }       
+
+        &-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0, 0, 0, 0.7);
+            display: none;
+        }     
 
         > div {
             display: flex;
@@ -37,6 +92,10 @@
                 color: var(--primary-color);
             }
         }
+    }
+
+    .active-nav {
+        transform: translateX(0);
     }
 
     .body {
@@ -147,6 +206,36 @@
 
 @media screen and (min-width: 1024px) {
     .container {
+        .header {
+            display: grid;
+            grid-template-columns: 2fr 1fr 1fr;
+            gap: 1rem;
+
+            &-nav {
+                transform: translateX(0);
+                height: auto;
+                width: auto;
+                flex-direction: row;
+                position: relative;
+                background-color: transparent;
+
+                &-item {
+                    color: var(--primary-color);
+                }
+
+                &-close {
+                    display: none;
+                }
+            }
+
+            > div {
+                justify-content: end;
+            }
+
+            &-menu {
+                display: none;
+            }
+        }
         .body {
             display: grid;
             grid-template-columns: 1.3fr 1fr;
@@ -236,5 +325,16 @@
                 }
             }
         }
+    }
+}
+
+/* Keyframes [ANIMATION]*/
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
