home responsiveness additional

--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -8,7 +8,7 @@
   padding: clamp(1rem, 0.772rem + 1.138vw, 1.5rem) clamp(1rem, -1.276rem + 11.38vw, 6rem);
 }
 .container .header h2 {
-  font-size: clamp(1.5rem, 1.272rem + 1.138vw, 2rem);
+  font-size: clamp(1.5rem, 1.286rem + 1.071vw, 3rem);
 }
 .container .header h2::after {
   content: "";
@@ -49,6 +49,7 @@
   opacity: 0;
   animation: fadeIn 1s forwards;
   font-size: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+  font-weight: 700;
 }
 .container .header-nav-item:nth-child(2) {
   animation-delay: 0.3s;
@@ -75,6 +76,8 @@
 }
 .container .header > div button {
   font-size: clamp(0.75rem, 0.636rem + 0.569vw, 1rem);
+  background-color: transparent;
+  border-radius: 15px;
 }
 .container .header > div i {
   font-size: clamp(1rem, 0.772rem + 1.138vw, 1.5rem);
@@ -170,6 +173,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 1rem;
+    justify-content: space-between;
   }
   .container .header-nav {
     transform: translateX(0);
@@ -181,12 +185,18 @@
   }
   .container .header-nav-item {
     color: var(--primary-color);
+    font-size: clamp(1rem, 0.667rem + 0.521vw, 1.5rem);
   }
   .container .header-nav-close {
     display: none;
   }
   .container .header > div {
     justify-content: end;
+  }
+  .container .header > div button {
+    font-size: clamp(1rem, 0.667rem + 0.521vw, 1.5rem);
+    border: 2px solid var(--primary-color);
+    font-weight: 700;
   }
   .container .header-menu {
     display: none;
@@ -218,6 +228,12 @@
   }
 }
 @media screen and (min-width: 1366px) {
+  .container .header {
+    grid-template-columns: 4fr 2fr 1fr;
+  }
+  .container .header-nav {
+    gap: clamp(4rem, -2.864rem + 8.04vw, 10rem);
+  }
   .container .body-intro {
     padding-block: clamp(6rem, -0.864rem + 8.04vw, 12rem);
   }
