--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -9,7 +9,7 @@
         padding: clamp(1rem, 0.772rem + 1.138vw, 1.5rem) clamp(1rem, -1.276rem + 11.38vw, 6rem);
 
         h2 {
-            font-size: clamp(1.5rem, 1.272rem + 1.138vw, 2rem);
+            font-size: clamp(1.5rem, 1.286rem + 1.071vw, 3rem);
 
             &::after {
                 content: "";
@@ -55,6 +55,7 @@
                 opacity: 0;
                 animation: fadeIn 1s forwards;
                 font-size: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+                font-weight: 700;
             }
 
             &-item:nth-child(2) {
@@ -85,6 +86,8 @@
 
             button {
                 font-size: clamp(0.75rem, 0.636rem + 0.569vw, 1rem);
+                background-color: transparent;
+                border-radius: 15px
             }
 
             i {
@@ -210,6 +213,7 @@
             display: grid;
             grid-template-columns: 2fr 1fr 1fr;
             gap: 1rem;
+            justify-content: space-between;
 
             &-nav {
                 transform: translateX(0);
@@ -221,6 +225,7 @@
 
                 &-item {
                     color: var(--primary-color);
+                    font-size: clamp(1rem, 0.667rem + 0.521vw, 1.5rem);
                 }
 
                 &-close {
@@ -230,6 +235,12 @@
 
             > div {
                 justify-content: end;
+
+                button {
+                    font-size: clamp(1rem, 0.667rem + 0.521vw, 1.5rem);
+                    border: 2px solid var(--primary-color);
+                    font-weight: 700;
+                }
             }
 
             &-menu {
@@ -280,6 +291,14 @@
 
 @media screen and (min-width: 1366px) {
     .container {
+        .header {
+            grid-template-columns: 4fr 2fr 1fr;
+
+            &-nav {
+                gap: clamp(4rem, -2.864rem + 8.04vw, 10rem);
+            }
+        }
+
         .body {
             &-intro {
                 padding-block: clamp(6rem, -0.864rem + 8.04vw, 12rem);
