--- a/styles/work/work.css
+++ b/styles/work/work.css
@@ -1,29 +1,161 @@
-.header {
-  position: sticky;
-  top: -40vh;
-  z-index: 100;
+:root {
+  --margin-inline: clamp(1rem, -1.276rem + 11.38vw, 6rem);
 }
 
-.container-work {
+.body-work__hero {
+  background-color: #B9A48C;
+  padding-inline: var(--margin-inline);
+  position: relative;
+  padding-block: clamp(6rem, 3.269rem + 13.656vw, 12rem) 16rem;
+}
+.body-work__hero__tag {
+  width: clamp(10rem, 0.896rem + 45.519vw, 30rem);
+}
+.body-work__hero__tag h1 {
+  color: #fff;
+  font-size: clamp(1.5rem, 1.045rem + 2.276vw, 2.5rem);
+  text-align: center;
+  margin-bottom: clamp(2rem, 1.545rem + 2.276vw, 3rem);
+}
+.body-work__hero__tag h1 span {
+  font-weight: 700;
+  color: #fff;
+}
+.body-work__hero__tag .tertiary_btn {
+  color: var(--primary-color);
+  font-weight: 700;
+  padding: 10px clamp(1.875rem, 1.306rem + 2.845vw, 3.125rem);
+  margin: auto;
+  font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
   display: flex;
+  gap: 5px;
+}
+.body-work__hero__tag .tertiary_btn img {
+  width: clamp(0.7rem, 0.472rem + 1.138vw, 1.2rem);
+}
+.body-work__hero > img {
+  position: absolute;
+  width: clamp(18rem, 15.724rem + 11.38vw, 23rem);
+  bottom: 0;
+  right: clamp(-6rem, -8.731rem + 13.656vw, 0rem);
+}
+.body-work__system {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+  margin-inline: var(--margin-inline);
+  padding-block: var(--margin-inline);
+}
+.body-work__system--img img {
+  width: clamp(15rem, 11.358rem + 18.208vw, 23rem);
+  display: flex;
+  margin: auto;
+}
+.body-work__system--info {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  width: 80vw;
-  height: 90%;
-  overflow-x: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-  gap: clamp(4rem, 1.325rem + 15.562vw, 20rem);
-  padding-inline: clamp(4rem, 2.997rem + 5.836vw, 10rem);
+  gap: 0.5rem;
 }
-.container-work img {
-  width: clamp(8rem, 5.158rem + 16.535vw, 25rem);
-  cursor: pointer;
+.body-work__system--info h3 {
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 149.42%;
+  font-size: clamp(1rem, 0.772rem + 1.138vw, 1.5rem);
+  margin-bottom: 1rem;
 }
-.container-work img:hover {
-  transform: scale(0.98);
+.body-work__system--info h4 {
+  font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
+}
+.body-work__system--info .bold {
+  font-weight: 700;
+}
+.body-work__system--info .font-style {
+  font-family: "Times New Roman", Times, serif;
+  margin-right: 10px;
+}
+.body-work__system--info button {
+  font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
+}
+.body-work__prototype {
+  background-color: var(--tertiary-color);
+  padding: var(--margin-inline);
+  margin-top: 2rem;
+}
+.body-work__prototype h1 {
+  color: var(--primary-color);
+  font-size: clamp(2rem, 1.09rem + 4.552vw, 4rem);
+  text-align: center;
+  margin-bottom: var(--margin-inline);
+}
+.body-work__prototype--images {
+  display: grid;
+  gap: clamp(1rem, 0.09rem + 4.552vw, 3rem);
+}
+.body-work__prototype--images img {
+  width: clamp(15rem, 11.358rem + 18.208vw, 23rem);
+}
+.body-work__prototype--images img:nth-child(2) {
+  margin-left: clamp(1.5rem, -4.417rem + 29.587vw, 14.5rem);
+}
+.body-work__prototype--images img:nth-child(3) {
+  margin-left: clamp(3rem, -8.835rem + 59.175vw, 29rem);
 }
 
-.container-work::-webkit-scrollbar {
-  display: none;
+@media only screen and (min-width: 1024px) {
+  :root {
+    --margin-inline: clamp(6rem, 0.667rem + 8.333vw, 14rem);
+  }
+  .body-work__hero {
+    padding-block: clamp(12rem, 8rem + 6.25vw, 18rem) clamp(16rem, 12.667rem + 5.208vw, 21rem);
+  }
+  .body-work__hero__tag {
+    width: clamp(30rem, 10rem + 31.25vw, 60rem);
+  }
+  .body-work__hero__tag h1 {
+    font-size: clamp(3rem, 1.667rem + 2.083vw, 5rem);
+  }
+  .body-work__hero img {
+    right: clamp(0rem, -9.333rem + 14.583vw, 14rem);
+    width: clamp(27rem, 21.667rem + 8.333vw, 35rem);
+  }
+  .body-work__system {
+    flex-direction: row;
+    align-items: center;
+    gap: clamp(2rem, -3.333rem + 8.333vw, 10rem);
+    padding-block: clamp(6rem, 2rem + 6.25vw, 12rem);
+  }
+  .body-work__system--img img {
+    width: clamp(18rem, 6.667rem + 17.708vw, 35rem);
+  }
+  .body-work__system--info h3 {
+    font-size: clamp(1rem, 0.772rem + 1.138vw, 1.5rem);
+  }
+  .body-work__system--info h4 {
+    font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
+  }
+  .body-work .info-second {
+    flex-direction: row-reverse !important;
+  }
+  .body-work__prototype h1 {
+    font-size: clamp(3rem, 1.667rem + 2.083vw, 5rem);
+    margin-bottom: clamp(4rem, 0rem + 6.25vw, 10rem);
+  }
+  .body-work__prototype--images {
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    margin-bottom: clamp(6rem, 4rem + 3.125vw, 9rem);
+  }
+  .body-work__prototype--images img {
+    width: clamp(15rem, 8.333rem + 10.417vw, 25rem);
+  }
+  .body-work__prototype--images img:nth-child(2) {
+    margin-left: 0 !important;
+    transform: translateY(clamp(3rem, 1rem + 3.125vw, 6rem));
+  }
+  .body-work__prototype--images img:nth-child(3) {
+    margin-left: 0 !important;
+    transform: translateY(clamp(6rem, 4rem + 3.125vw, 9rem));
+  }
 }/*# sourceMappingURL=work.css.map */
